css/portfolio/todo-app.css
/* ... */
#todo-categories-container {
    height: 100vh;
    position: fixed;
    width: 300px;
}

.toggle-list-container-on-mobile{
    z-index: 1;
    width: 100% !important;
    margin-left: -1rem !important;
    margin-top: -1.5rem;
    transition: margin 300ms ease-in-out;
}

#todo-profile {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 2.7rem 0 2.8rem 1rem;
    font-size: 1rem;
    height: 9vh;
    background-color: #fff;
    margin-bottom: 1rem;
    border-radius: 0 4px 4px 0;
    margin-top: 2rem;
}

.todo-profile__img {
    width: 50px;
    border-radius: 50%;
    height: 50px;
    object-fit: cover;
    object-position: top;
    cursor: pointer;
}

.profile-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

#todo-profile input{
    display: none;
}

.fa-camera {
    color: #e1a041;
    position: absolute;
    left: 2.2rem;
    bottom: 0;
    background: #ffffff;
    padding: 0.2rem;
    border-radius: 50%;
    font-size: 0.8rem;
    cursor: pointer;
}

#todo-profile label {
    position: relative;
}

#todo-profile__email {
    word-break: break-word;
    width: 100%;
    margin-left: 1rem;
    font-size: 0.85rem;
}

#todo-categories {
    height: 86vh;
    background-color: #fff;
    position: relative;
    border-radius: 0 4px 0 0;
}

#todo-list-categories-ul {
    list-style: none;
    padding: 1rem 0;
    font-size: 1rem;
    pointer-events: none;
    overflow-x: hidden;
    overflow-y: auto;
    height: 91.5%;
}

.todo-list-category-li {
    width: 100%;
    padding: 1rem 0 1rem 1.5rem;
    margin: 0;
    border-bottom: 1px solid #cccccc90;
    color: #333;
    cursor: pointer;
    transition: all 300ms ease-in-out;
    pointer-events: all;
    position: relative;
    display: flex;
}

.todo-list-category-li i.icon,
.todo-list-category-li i.icon-2 {
    margin-right: 1rem;
    color: #8c9bad;
    font-size: 1.2rem;
    cursor: move;
}

.category-text {
    font-size: 0.8rem;
    max-width: 66%;
    word-break: break-all;
}

.category-btns {
    position: absolute;
    right: -0.7rem;
    top: 0.5rem;
    color: #8c9bad;
    list-style: none;
    align-items: center;
    width: 38px;
    opacity: 1;
    transition: opacity 300ms ease;
    background: #fff;
    border-radius: 4px;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
}

.category-btn {
    right: 3rem;
    position: relative;
    padding-left: 0.7rem;
    font-size: 0.7rem;
}

.cat-save {
    position: absolute;
    right: 1.6rem;
}

.cat-edit {
    right: 2.9rem;
}

.cat-delete {
    top: -0.25rem;
}

.cat-hidden{
    transition: opacity 300ms ease-in-out;
    opacity: 0 !important;
    pointer-events: none;
}

.delete-list__button {
    border: none;
    background: #a93500;
    color: #fff;
    padding: 1rem 2rem;
    margin: 1rem;
    border-radius: 8px;
    cursor: pointer;
    font-family: inherit;
}

.delete-list-popup {
    position: absolute;
    top: 50%;
    left: 50%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    width: 100%;
    max-width: 400px;
    background: #fff;
    padding: 2.5rem 5rem;
    border-radius: 16px;
    box-shadow: 0 0 14px rgb(0,0,0,0.8);
    height: 220px;
    margin-bottom: 0;
    font-size: 1rem;
    opacity: 1;
    transform: translate(-50%, -50%);
    transition: all 500ms ease;
    z-index: 11;
}

.cat-options {
    position: absolute;
    right: 0.8rem;
    top: 1.2rem;
    color: #33333390;
    cursor: pointer;
}

.category-edit-mode {
    background: #fdebcb;
    padding: 0rem 1rem 0rem 0.5rem;
    border-radius: 1rem;
}

.category-edit-mode:focus {
    outline: 0px;
    outline-offset: none;
}

.close-delete-list {
    position: absolute;
    right: -7px;
    top: -7px;
    color: #33333390;
    background: #fff;
    border-radius: 50%;
    width: 35px;
    height: 35px;
    text-align: center;
    font-size: 1.5rem;
    padding: 0.3rem 0 0 0rem;
    cursor: pointer;
}

.selected {
    transform: scale(1.1);
    padding-left: 1.9rem;
    transition: all 300ms ease-in-out;
    width: 95%;
}

.selected .icon {
    color: #e1a041 !important;
}

#create-list-btn {
    width: 100%;
    padding: 1.7rem;
    border: 0;
    border-radius: 0;
    font-size: 2rem;
    color: #fff;
    background: #419fe1;
    position: absolute;
    bottom: 0;
    cursor: pointer;
}

.create-list-popup, 
#select-list-popup {
    position: absolute;
    top: 50%;
    left: 50%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    max-width: 400px;
    background: #fff;
    padding: 2.5rem 5rem;
    border-radius: 16px;
    box-shadow: 0 0 14px rgb(0,0,0,0.8);
    margin-bottom: 0;
    opacity: 1;
    transform: translate(-50%, -50%);
    transition: all 700ms ease;
}

#initial-screens {
    background: #fff;
    width: 100vw;
    height: 100vh;
    position: absolute;
    top: 0;
}

.create-list-popup-initial {
    position: absolute;
    top: 0;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: center;
    background: #ffffff;
    padding: 2.5rem 5rem;
    height: 100vh;
    align-content: center;
    opacity: 1;
    transition: margin 500ms ease;
    margin-top: 105%;
    min-width: 450px;
    z-index: 1;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    transition-delay: 200ms;
}

#create-account {
    display: flex;
    height: 100vh;
    position: absolute;
    background: #ffffff;
    z-index: 1;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    flex-direction: column;
    text-align: center;
    margin-left: 0%;
    transition: margin 1000ms ease;
    min-width: 400px;
    top: 50%;
    left: 47%;
    transform: translate(-50%, -50%);
    z-index: 12;
}

.create-list-popup-initial .close-create-list {
    display: none;
}

.create-list-popup-initial input {
    max-width: 350px;
}

.select-list-text {
    width: 100%;
    text-align: center;
}
/* ... */

